--- a/.gitignore
+++ b/.gitignore
@@ -143,3 +143,8 @@ _deps
 # End of https://www.toptal.com/developers/gitignore/api/clion+all,cmake
 
 TODO.md
+stb/
+models/
+textures/
+Playground
+Playground/*
