--- a/GraphicsViewer/FTGE/CMakeLists.txt
+++ b/GraphicsViewer/FTGE/CMakeLists.txt
@@ -8,6 +8,10 @@ add_compile_options(-Wall -Werror -Wextra)
 #add_link_options( -lSDL2 -lGL -lSDL2_image )
 #add_link_options( -lglfw -lGL -lGLEW -lvulkan -ldl -lpthread -lX11 -lXxf86vm -lXrandr -lXi)
 
+## Imgui
+add_subdirectory(imgui)
+
+
 ## add glsl files compilation
 find_program(GLSLC glslc)
 find_program(GLSL_VALIDATOR glslangValidator)
@@ -44,6 +48,6 @@ add_custom_target(Models)
 
 
 add_link_options( -lglfw -lGL -lGLEW -lvulkan -ldl -lpthread )
-add_executable(ftGraphics main.cpp src/ft_window.cpp src/ft_app.cpp src/ft_callbacks.cpp includes/ft_callbacks.h src/ft_shader.cpp src/ft_instance.cpp src/ft_physicalDevice.cpp src/ft_device.cpp src/ft_surface.cpp src/ft_swapChain.cpp includes/ft_physicalDevice.h includes/ft_buffer.h includes/ft_frameBuffer.h src/ft_image.cpp src/ft_buffer.cpp src/ft_frameBuffer.cpp src/ft_vertex.cpp src/ft_command.cpp includes/ft_renderPass.h includes/ft_attachment.h src/ft_attachment.cpp src/ft_renderPass.cpp includes/ft_defines.h includes/ft_event.h src/ft_event.cpp)
-
+add_executable(ftGraphics main.cpp src/ft_window.cpp src/ft_app.cpp src/ft_callbacks.cpp includes/ft_callbacks.h src/ft_shader.cpp src/ft_instance.cpp src/ft_physicalDevice.cpp src/ft_device.cpp src/ft_surface.cpp src/ft_swapChain.cpp includes/ft_physicalDevice.h includes/ft_buffer.h includes/ft_frameBuffer.h src/ft_image.cpp src/ft_buffer.cpp src/ft_frameBuffer.cpp src/ft_vertex.cpp src/ft_command.cpp includes/ft_renderPass.h includes/ft_attachment.h src/ft_attachment.cpp src/ft_renderPass.cpp includes/ft_defines.h includes/ft_event.h src/ft_event.cpp includes/ft_app.h includes/ft_gui.h src/ft_gui.cpp)
+target_link_libraries(ftGraphics imgui)
 add_dependencies(ftGraphics Shaders)
