updationg the descriptor abstraction, adding a simple rendering system with shaders, fixing errors

--- a/GraphicsViewer/FTGE/CMakeLists.txt
+++ b/GraphicsViewer/FTGE/CMakeLists.txt
@@ -20,6 +20,8 @@ file(GLOB_RECURSE GLSL_SOURCE_FILES
 #    add the shader files here
         shaders/shader.vert
         shaders/shader.frag
+        shaders/SimpleRdrSys.vert
+        shaders/SimpleRdrSys.frag
         )
 
 foreach(GLSL_F ${GLSL_SOURCE_FILES})
