--- a/GraphicsViewer/FTGE/CMakeLists.txt
+++ b/GraphicsViewer/FTGE/CMakeLists.txt
@@ -63,7 +63,9 @@ add_executable(ftGraphics main.cpp src/ft_window.cpp src/ft_app.cpp
         src/ft_gui.cpp src/ft_model.cpp src/ft_scene.cpp src/ft_renderer.cpp
         src/ft_pipeline.cpp src/ft_rendering_systems.cpp
         src/ft_descriptor.cpp src/ft_camera.cpp src/ft_sampler.cpp
-        src/ft_material.cpp)
+        src/ft_material.cpp
+        includes/ft_picker.h
+        src/ft_picker.cpp)
 
 target_link_libraries(ftGraphics imgui)
 add_dependencies(ftGraphics Shaders)
