restructuring the project

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,8 +9,12 @@ set(CMAKE_INSTALL_PREFIX "${CMAKE_CURRENT_SOURCE_DIR}/install")
 # Include ftphysics to build the shared library
 add_subdirectory(PhysicsEngine)
 
-# Include ftgraphics to build the executable
+# Include ftgraphics to build the shared library 
 add_subdirectory(GraphicsViewer)
 
-# Add a dependency to ensure ftGraphics doesn't build until ftPhysics is built
-add_dependencies(ftGraphics ftPhysics) # Ensures ftPhysics builds first
+# Include ftApp to build the executable
+add_subdirectory(Application)
+
+# Add a dependency to ensure ftApp doesn't build until both ftGraphics and ftPhysics are built
+add_dependencies(ftApp ftGraphics ftPhysics)
+
