--- a/GraphicsViewer/CMakeLists.txt
+++ b/GraphicsViewer/CMakeLists.txt
@@ -1,21 +1,22 @@
 cmake_minimum_required(VERSION 3.24)
-project(ftGraphics)
+project(
+  ftGraphics
+  VERSION 1.0.1
+  DESCRIPTION "My backend renderer based on vulkan")
 
 set(CMAKE_CXX_STANDARD 17)
-
+include(GNUInstallDirs)
 add_compile_options(-Wall -Werror -Wextra -pg -O3)
 
-# Imgui
-add_subdirectory(imgui)
 
 # add glsl files compilation
 find_program(GLSLC glslc)
 find_program(GLSL_VALIDATOR glslangValidator)
 
+# add the shader files here
 file(
   GLOB_RECURSE
   GLSL_SOURCE_FILES
-  # add the shader files here
   shaders/shader.vert
   shaders/shader.frag
   shaders/SimpleRdrSys.vert
@@ -52,12 +53,6 @@ endforeach(GLSL_F)
 
 add_custom_target(Shaders DEPENDS ${SPIRV_BINARY_FILES})
 
-# copy texture folder to build file(COPY textures DESTINATION
-# ${CMAKE_CURRENT_BINARY_DIR}) add_custom_target(Texture)
-
-# copy model folder to build
-file(COPY assets misk DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
-add_custom_target(Assets)
 
 # include_directories(external/ktx/other_include) set(KTX_DIR
 # ${CMAKE_CURRENT_SOURCE_DIR}/external/ktx) set(KTX_SOURCES
@@ -78,58 +73,104 @@ add_link_options(
   -pg
   -O3)
 
-find_package(nlohmann_json REQUIRED)
 
 # Set the CMAKE_PREFIX_PATH to point to the correct install directory
 set(CMAKE_PREFIX_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../install")
 
-# Find the shared library package configuration
-find_package(ftPhysics REQUIRED)
 
-# Create an executable
-add_executable(
-  ftGraphics
-  main.cpp
-  src/ft_window.cpp
-  src/ft_app.cpp
+# Create a shared library 
+set(GRAPHICS_SOURCES
+  src/ft_attachment.cpp
+  src/ft_buffer.cpp
   src/ft_callbacks.cpp
-  src/ft_shader.cpp
-  src/ft_instance.cpp
-  src/ft_physicalDevice.cpp
+  src/ft_camera.cpp
+  src/ft_command.cpp
+  src/ft_descriptor.cpp
   src/ft_device.cpp
+  src/ft_event.cpp
+  src/ft_frameBuffer.cpp
+  src/ft_image.cpp
+  src/ft_instance.cpp
+  src/ft_model.cpp
+  src/ft_parser.cpp
+  src/ft_physicalDevice.cpp
+  src/ft_picker.cpp
+  src/ft_pipeline.cpp
+  src/ft_renderPass.cpp
+  src/ft_renderer.cpp
+  src/ft_rendering_systems.cpp
+  src/ft_sampler.cpp
+  src/ft_scene.cpp
+  src/ft_shader.cpp
   src/ft_surface.cpp
   src/ft_swapChain.cpp
-  src/ft_image.cpp
-  src/ft_buffer.cpp
-  src/ft_frameBuffer.cpp
-  src/ft_vertex.cpp
-  src/ft_command.cpp
-  src/ft_attachment.cpp
-  src/ft_renderPass.cpp
-  src/ft_event.cpp
-  src/ft_gui.cpp
-  src/ft_model.cpp
-  src/ft_scene.cpp
-  src/ft_renderer.cpp
-  src/ft_pipeline.cpp
-  src/ft_rendering_systems.cpp
-  src/ft_descriptor.cpp
-  src/ft_camera.cpp
-  src/ft_sampler.cpp
   src/ft_texture.cpp
-  src/ft_picker.cpp
-  src/ft_parser.cpp
-  includes/ft_tools.h
-  includes/ft_threads.h
-  src/ft_physicsApp.cpp
-  src/ft_rigidObject.cpp
-  includes/ft_sceneObject.h
-  src/ft_component.cpp
+  src/ft_vertex.cpp
+  src/ft_window.cpp
   )
 
-target_link_libraries(ftGraphics imgui ftPhysics nlohmann_json::nlohmann_json)
-add_dependencies(ftGraphics Shaders ftPhysics)
+add_library(ftGraphics SHARED ${GRAPHICS_SOURCES})
+add_dependencies(ftGraphics Shaders)
 
-# Include headers from ftPhysics for #include statements
-target_include_directories(ftGraphics
-                           PRIVATE "${CMAKE_PREFIX_PATH}/include/ftPhysics")
+
+# Define the export target
+install(
+  TARGETS ftGraphics
+  EXPORT ftGraphicsTargets
+  LIBRARY DESTINATION ../install/lib) # Local installation
+
+
+set(SHADER_DIR "${PROJECT_BINARY_DIR}/shaders/")
+add_definitions(-DSHADER_DIR=${SHADER_DIR})
+
+# Install the header files
+set(GRAPHICS_HEADERS
+  includes/ftGraphics.h
+  includes/ft_attachment.h
+  includes/ft_buffer.h
+  includes/ft_callbacks.h
+  includes/ft_camera.h
+  includes/ft_command.h
+  includes/ft_component.h
+  includes/ft_defines.h
+  includes/ft_descriptor.h
+  includes/ft_device.h
+  includes/ft_event.h
+  includes/ft_frameBuffer.h
+  includes/ft_headers.h
+  includes/ft_image.h
+  includes/ft_instance.h
+  includes/ft_model.h
+  includes/ft_parser.h
+  includes/ft_physicalDevice.h
+  includes/ft_picker.h
+  includes/ft_pipeline.h
+  includes/ft_renderPass.h
+  includes/ft_renderer.h
+  includes/ft_rendering_systems.h
+  includes/ft_sampler.h
+  includes/ft_scene.h
+  includes/ft_sceneObject.h
+  includes/ft_shader.h
+  includes/ft_surface.h
+  includes/ft_swapChain.h
+  includes/ft_texture.h
+  includes/ft_threads.h
+  includes/ft_tools.h
+  includes/ft_vertex.h
+  includes/ft_window.h
+  includes/stb_image.h
+)
+
+install(FILES ${GRAPHICS_HEADERS} DESTINATION ../install/include/ftGraphics)
+
+
+# Install the package configuration file
+install(
+  EXPORT ftGraphicsTargets
+  FILE ftGraphicsConfig.cmake
+  DESTINATION ../install/share/cmake/ftGraphics) # Local installation
+
+
+
+
