adding a minimal pipline, adding element to the gui, restructuring the porject, adding lighting controle to the scene and shaders

--- a/GraphicsViewer/CMakeLists.txt
+++ b/GraphicsViewer/CMakeLists.txt
@@ -19,6 +19,8 @@ file(
   GLSL_SOURCE_FILES
   shaders/shader.vert
   shaders/shader.frag
+  shaders/MinimalRdrSys.vert
+  shaders/MinimalRdrSys.frag
   shaders/SimpleRdrSys.vert
   shaders/SimpleRdrSys.frag
   shaders/InstanceRdrSys.vert
